# AndroidCelestia

./: .gitignore  .gitmodules  README.md  azure-pipelines.yml  build.gradle  build.gradle.kts  gradle.properties  huawei.patch  metadata  settings.gradle  settings.gradle.kts  versions.txt
.github/workflows/: build.yml
Celestia/: build.gradle  build.gradle.kts  proguard-rules.pro
Celestia/src/main/: AndroidManifest.xml
Celestia/src/main/cpp/: CMakeLists.txt  CelestiaAppCore.cpp  CelestiaAstroObject.cpp  CelestiaBody.cpp  CelestiaDMS.cpp  CelestiaDSO.cpp  CelestiaDSOCatalog.cpp  CelestiaDestination.cpp  CelestiaEclipseFinder.cpp  CelestiaFont.cpp  CelestiaJNI.h  CelestiaLocation.cpp  CelestiaObserver.cpp  CelestiaOrbit.cpp  CelestiaPlanetarySystem.cpp  CelestiaRenderer.cpp  CelestiaRotationModel.cpp  CelestiaScript.cpp  CelestiaSelection.cpp  CelestiaSelection.h  CelestiaSimulation.cpp  CelestiaStar.cpp  CelestiaStarBrowser.cpp  CelestiaStarCatalog.cpp  CelestiaUniversalCoord.cpp  CelestiaUniverse.cpp  CelestiaUtils.cpp  CelestiaVector.cpp  CelestiaVector.h  CelestiaXR.cpp  CelestiaXRRenderer.cpp  celestia_xr_api.h  config.h
Celestia/src/main/cpp/gamesdk/include/common/: gamesdk_common.h
Celestia/src/main/cpp/gamesdk/include/swappy/: swappyGL_extra.h  swappyVk.h  swappy_common.h
CelestiaFoundation/: build.gradle  build.gradle.kts
CelestiaUI/: build.gradle.kts  proguard-rules.pro
CelestiaUI/src/main/: AndroidManifest.xml
CelestiaUI/src/main/res/drawable/: accessory_full_disclosure.xml  browser_tab_star.xml  control_action_menu.xml  control_close.xml  control_info.xml  control_mode_camera.xml  control_mode_combined.xml  control_search.xml  help_24px.xml  ic_share.xml  tutorial_mode_camera.xml  tutorial_switch_mode.xml
CelestiaUI/src/main/res/layout/: common_auto_complete_text_view.xml  common_options_select.xml  fragment_common_web.xml
CelestiaUI/src/main/res/values/: dimens.xml  styles.xml
CelestiaUI/src/main/res/values-v26/: styles.xml
LinkPreview/: build.gradle  build.gradle.kts
LinkPreview/src/main/: AndroidManifest.xml
LinkPreview/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  styles.xml
LinkPreview/src/main/res/values-night/: colors.xml
Slider/: build.gradle
Slider/src/main/res/values/: attrs.xml  dimens.xml  styles.xml
ZipUtils/: build.gradle  build.gradle.kts
ZipUtils/src/main/cpp/: CMakeLists.txt  ZipUtils.cpp
app/: appcenter-post-build.sh  appcenter-post-clone.sh  build.gradle  build.gradle.kts  convert_po.sh  copy_general_data.sh  copy_localized_files.sh  downsize_textures.sh  proguard-rules.pro  run_gperf.sh
app/src/main/: AndroidManifest.xml
app/src/main/assets/: defaults.json
app/src/main/cpp/: CMakeLists.txt  CelestiaAppCore.cpp  CelestiaAstroObject.cpp  CelestiaBody.cpp  CelestiaDMS.cpp  CelestiaDSO.cpp  CelestiaDSOCatalog.cpp  CelestiaDestination.cpp  CelestiaEclipseFinder.cpp  CelestiaJNI.h  CelestiaLocation.cpp  CelestiaObserver.cpp  CelestiaOrbit.cpp  CelestiaPlanetarySystem.cpp  CelestiaRenderer.cpp  CelestiaRotationModel.cpp  CelestiaScript.cpp  CelestiaSelection.cpp  CelestiaSimulation.cpp  CelestiaStar.cpp  CelestiaStarBrowser.cpp  CelestiaStarCatalog.cpp  CelestiaUniversalCoord.cpp  CelestiaUniverse.cpp  CelestiaUtils.cpp  CelestiaVector.cpp  CelestiaVector.h  config.h  libs
app/src/main/cpp/crash/: CMakeLists.txt  CrashHandler.cpp
app/src/main/cpp/fonthelper/: CMakeLists.txt  FontHelper.cpp
app/src/main/cpp/gamesdk/include/swappy/: swappyGL.h  swappyGL_extra.h  swappy_common.h
app/src/main/res/anim/: enter_from_bottom.xml  enter_from_left.xml  enter_from_right.xml  enter_from_top.xml  exit_to_bottom.xml  exit_to_left.xml  exit_to_right.xml  exit_to_top.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: accessory_full_disclosure.xml  background.xml  baseline_share_24.xml  bottom_control_hide.xml  bottom_sheet_card_background.xml  bottom_toolbar_faster.xml  bottom_toolbar_playpause.xml  bottom_toolbar_reverse.xml  bottom_toolbar_slower.xml  bottom_toolbar_stop.xml  browser_tab_dso.xml  browser_tab_sso.xml  button_background_selector.xml  common_other.xml  control_action_menu.xml  control_close.xml  control_drag_mode_combined.xml  control_go.xml  control_hide.xml  control_info.xml  control_mode_camera.xml  control_mode_combined.xml  control_mode_object.xml  control_search.xml  control_show.xml  control_view_background.xml  control_zoom_in.xml  control_zoom_out.xml  grabber.xml  ic_action_arrow_back.xml  ic_action_arrow_forward.xml  ic_action_back_tint.xml  ic_action_forward_tint.xml  ic_add.xml  ic_add_tint.xml  ic_baseline_search_24.xml  ic_check.xml  ic_close.xml  ic_dehaze.xml  ic_launcher_background.xml  (+38 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  common_action_button.xml  common_link_preview.xml  common_multiline_text_item.xml  common_progress_button.xml  common_reorderable_text_list_item.xml  common_resource_item.xml  common_section_footer.xml  common_section_header.xml  common_swipeable_text_list_item.xml  common_text_list_item.xml  common_text_list_with_checkbox_item.xml  common_text_list_with_radio_button_item.xml  common_text_list_with_slider_item.xml  common_text_list_with_stepper_item.xml  (+62 more)
app/src/play/: AndroidManifest.xml
app/src/sideload/assets/: defaults.json
app/src/unofficial/: assets
base_assets/: build.gradle  build.gradle.kts
base_assets/src/main/: assets
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jobs/: build.yml
metadata/bg/: short_description.txt
metadata/pt-BR/: short_description.txt
metadata/zh-CN/: full_description.txt
xrapp/: build.gradle.kts  convert_po.sh  copy_general_data.sh  copy_localized_files.sh  downsize_textures.sh  proguard-rules.pro  run_gperf.sh
xrapp/src/main/: AndroidManifest.xml
xrapp/src/main/assets/: defaults.json  fonts
xrapp/src/main/cpp/: CMakeLists.txt  celestia_openxr.cpp  celestia_openxr.h  jni_bridge.cpp
(+786 files in other folders)
